# StratX

./: .commit_history  .gitignore  BUILD_SUMMARY.md  F1_NAVIGATION_VISUAL.md  F1_REDESIGN_COMPLETE.md  Makefile  README.md  REDESIGN_SUMMARY.md  create_commits.sh  pyproject.toml  requirements.txt  tree.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy.yml
api/: index.py
backend/src/api/: main.py
docs/: DATA_AUDIT.md  DEPLOYMENT.md  HISTORICAL_DATA.md  NAVIGATION_FIX_2026.md  NAVIGATION_GUIDE.md  ml_readme.md
frontend/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DriverComparison.css  DriverComparison.tsx  Header.css  Header.tsx  LiveTelemetry.css  LiveTelemetry.tsx  PreRacePredictionView.tsx  PredictionAccuracyView.css  PredictionAccuracyView.tsx  PredictionCards.css  PredictionCards.tsx  TelemetryCharts.css  TelemetryCharts.tsx
frontend/src/constants/: drivers.ts  races.ts
frontend/src/hooks/: usePredictions.ts  useTelemetry.ts  useTelemetryHistory.ts
frontend/src/pages/: ArchivePage.css  ArchivePage.tsx  CircuitsPage.css  CircuitsPage.tsx  DriverStandingsPage.css  DriverStandingsPage.tsx  DriversPage.css  DriversPage.tsx  HomePage.css  HomePage.tsx  IndividualRaceResultPage.css  IndividualRaceResultPage.tsx  (+14 more)
scripts/: check_schedule.py  fetch_historical_data.py  generate_static_data.py  precache_2025_data.py  validate_models.py
src/stratx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+312 files in other folders)
